Fix text overflow in Dialog view

--- a/ui-web/src/style.scss
+++ b/ui-web/src/style.scss
@@ -27,6 +27,10 @@ html, body {
   cursor: default;
 }
 
+.word-break {
+  word-break: break-word;
+}
+
 .serio-title {
   font-size: 90px;
   font-family: "Passion One";
